    - Move pfb/afm links from X11R6 hierachy to /usr/share/fonts/X11
    - remove lintian override file
    - build-depends to debhelper >= 5.0.31
    - adapt location of file in defoma hints file
    - remove installation of X11R6/fonts/Type1 directory
    - install .scale file into /e/X11/fonts/X11R7/Type1
  * move the dir creation from package.dirs to the rules file

 -- Norbert Preining <preining@logic.at>  Wed, 19 Apr 2006 01:30:09 +0200

cm-super (0.3.3-3) unstable; urgency=low

  * move map files to /usr/share/texmf/fonts/map/dvips/cm-super
  * change texlive dependencies after name change of packages
  * adapted maintainer scripts to be more silent
  * depend on pfb2t1c2pfb, remove the perl version
  * depend on tex-common >= 0.11 to get /etc/texmf as TEXMFSYSCONFIG

 -- Norbert Preining <preining@logic.at>  Tue, 13 Dec 2005 21:22:54 +0100

cm-super (0.3.3-2) unstable; urgency=low

  * list all map files in updmap config file as MixedMap (Closes: #332670)
  * depend only on tex-common, making it impossible to install together
    with teTeX2. Add a README.teTeX2 for backporters. (Closes: #332673)
    This also closes the bug that cm-super-t1.map is left over in
    the updmap.cfg file (Closes: #334177)
  * make font generation less noisy, only mention that it may take
    some time. (Closes: #333745)
  * include the postrm/postinst scripts from lmodern, which are prototypes
    of the Font Package part of the TeX Policy.
  * Install the afm files also to /usr/share/texmf and only make links
    in /usr/X11R6
  * Install defoma hints file
  * The package name is cm-super now, so closes: #325093.
  * depend on tetex-(base|extra) | texlive-latexrecommended to get the
    mf sources and tfm files of the fonts.

 -- Norbert Preining <preining@logic.at>  Mon, 17 Oct 2005 01:31:00 +0200

cm-super (0.3.3-1) unstable; urgency=low

  * Suggest pfb2t1c2pfb for binary conversion program. In the postinst